# personalSkills

./: .gitignore  README.md
ai-obs-lab/: README.md  SKILL.md  pyproject.toml  start.sh
ai-obs-lab/config/: proxy.example.yaml
ai-obs-lab/scripts/: extract_to_standalone.sh
ai-obs-lab/src/ai_obs_lab/: __init__.py  cli.py
ai-obs-lab/src/ai_obs_lab/core/: models.py  sqlite_store.py  store.py
ai-obs-lab/src/ai_obs_lab/dashboard/: html.py  query.py  server.py  tail.py
ai-obs-lab/src/ai_obs_lab/dashboard/web/: app.py
ai-obs-lab/src/ai_obs_lab/eval/: interop.py  judge.py  metrics.py  runner.py
ai-obs-lab/src/ai_obs_lab/eval/suites/: json-extract.example.yaml
ai-obs-lab/src/ai_obs_lab/proxy/: mcp_stdio.py  server.py  sse_parser.py
ai-obs-lab/tests/: test_context_parser.py  test_interop.py  test_mcp_stdio.py  test_metrics.py  test_proxy_smoke.py  test_runner_parallel.py  test_server.py  test_sqlite_store.py  test_sse_parser.py  test_store.py  test_web_app.py
ai-obs-lab/tests/fixtures/: anthropic_stream.txt  openai_stream.txt
claude-code-switcher/: README.md  config-example.sh  setup.sh
editorial-illustration/: README.md  SKILL.md
editorial-illustration/agents/: openai.yaml
editorial-illustration/references/: composition-patterns.md  example-index.md  ip-character.md  prompt-template.md  qa-checklist.md  style-dna.md
generate-image-public/: README.md  SKILL.md
illustration-image-backend/: README.md  SKILL.md
illustration-prompt-composer/: README.md  SKILL.md
illustration-styles/: README.md  SKILL.md
knowledge-wiki/: SKILL.md  package.json
skill-debug-sync/: SKILL.md  package.json
skill-store-manager/: .gitignore  README.md  SKILL.md  package.json
(+107 files in other folders)
