[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-obs-lab"
version = "0.1.0-mvp"
description = "Local AI observability lab: HTTP proxy to capture LLM traffic, A/B prompt eval, static HTML dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # Phase 1 intentionally has no third-party deps (stdlib only)

[project.optional-dependencies]
# Phase 2 will likely add: fastapi, uvicorn, duckdb
dev = []

# Phase 2: uncomment to enable `aolab` CLI after `pip install -e .`
# [project.scripts]
# aolab = "ai_obs_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
