[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-obs-lab"
version = "0.1.0-mvp"
description = "Local AI observability lab: HTTP proxy to capture LLM traffic, A/B prompt eval, static HTML dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # Phase 1 intentionally has no third-party deps (stdlib only)

[project.optional-dependencies]
# Optional Phase 2 backends. The toolkit runs fully on stdlib without these;
# install an extra only to opt into the corresponding richer backend.
web = ["fastapi>=0.110", "uvicorn>=0.27"]   # `serve --backend fastapi`
store = ["duckdb>=0.10"]                      # future DuckDB-backed Store
dev = []

# Phase 2: uncomment to enable `aolab` CLI after `pip install -e .`
# [project.scripts]
# aolab = "ai_obs_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
